--- a/TradeUp/amplify/backend/backend-config.json
+++ b/TradeUp/amplify/backend/backend-config.json
@@ -63,6 +63,22 @@
           ]
         }
       ]
+    },
+    "TradeUpReceipt": {
+      "build": true,
+      "providerPlugin": "awscloudformation",
+      "service": "Lambda",
+      "dependsOn": [
+        {
+          "category": "storage",
+          "resourceName": "TradeUpReceipts",
+          "attributes": [
+            "Name",
+            "Arn",
+            "StreamArn"
+          ]
+        }
+      ]
     }
   },
   "api": {
@@ -101,6 +117,14 @@
             "Name",
             "Arn"
           ]
+        },
+        {
+          "category": "function",
+          "resourceName": "TradeUpReceipt",
+          "attributes": [
+            "Name",
+            "Arn"
+          ]
         }
       ]
     }
@@ -119,6 +143,10 @@
       "providerPlugin": "awscloudformation"
     },
     "TradeUpRequests": {
+      "service": "DynamoDB",
+      "providerPlugin": "awscloudformation"
+    },
+    "TradeUpReceipts": {
       "service": "DynamoDB",
       "providerPlugin": "awscloudformation"
     }
