--- a/TradeUp/package.json
+++ b/TradeUp/package.json
@@ -10,6 +10,8 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.7",
+    "@react-native-community/datetimepicker": "^6.1.3",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-picker/picker": "^2.4.1",
     "@react-navigation/bottom-tabs": "^6.3.1",
